# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rust-advent-of-code"
version = "0.1.0"
authors = ["Reed Spool <yesoperator@gmail.com>"]
description = "Advent of Code"
license = "MIT/Apache-2.0"
repository = "https://github.com/reedspool/rust-aoc"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1"
wasm-bindgen = "0.2"
